--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1647,3 +1647,14 @@ year={2014},
 title={A short introduction to frames, Gabor systems, and wavelet systems},
 url={https://backend.orbit.dtu.dk/ws/portalfiles/portal/105634286/A_Short_Introduction_to_Frames.pdf}
 }
+
+@article{mdct,
+author = {Wang, Ye and Vilermo, Miikka},
+year = {2003},
+pages = {52--61},
+title = {Modified discrete cosine transform: its implications for audio coding and error concealment},
+volume = {51},
+journal = {Journal of the The Audio Engineering Society},
+url = {https://smcnus.comp.nus.edu.sg/wp-content/uploads/papers/5.Error_Robust_Audio_Streaming/2002_The_Modified_Discrete_Cosine_Transform-Its_Implications_for_Audio_Coding_and_Error_Concealment.pdf}
+}
+
