--- a/latex/report.tex
+++ b/latex/report.tex
@@ -103,9 +103,8 @@
 
 \newpagefill
 
-\subfile{ch0.tex}
-
-\newpagefill
+%\subfile{ch0.tex}
+%\newpagefill
 
 \tableofcontents
 
@@ -117,27 +116,22 @@
 
 \newpagefill
 
-\subfile{ch1.tex}
+%\subfile{ch1.tex}
+%\newpagefill
 
-\newpagefill
-
+\setcounter{section}{1}
 \subfile{ch2.tex}
-
 \newpagefill
 
-\subfile{ch3.tex}
+%\subfile{ch3.tex}
+%\newpagefill
+%
+%\subfile{ch4.tex}
+%\newpagefill
+%
+%\subfile{ch5.tex}
+%\newpagefill
 
-\newpagefill
-
-\subfile{ch4.tex}
-
-\newpagefill
-
-\subfile{ch5.tex}
-
-\newpagefill
-
-%\nocite{*}
 \section{References}
 \printbibliography[heading=none]
 
