--- a/latex/report.tex
+++ b/latex/report.tex
@@ -103,8 +103,8 @@
 
 \newpagefill
 
-%\subfile{ch0.tex}
-%\newpagefill
+\subfile{ch0.tex}
+\newpagefill
 
 \tableofcontents
 
@@ -116,21 +116,22 @@
 
 \newpagefill
 
-%\subfile{ch1.tex}
-%\newpagefill
+\subfile{ch1.tex}
+\newpagefill
 
-\setcounter{section}{1}
+%\setcounter{section}{1}
 \subfile{ch2.tex}
 \newpagefill
 
-%\subfile{ch3.tex}
-%\newpagefill
-%
-%\subfile{ch4.tex}
-%\newpagefill
-%
-%\subfile{ch5.tex}
-%\newpagefill
+%\setcounter{section}{2}
+\subfile{ch3.tex}
+\newpagefill
+
+\subfile{ch4.tex}
+\newpagefill
+
+\subfile{ch5.tex}
+\newpagefill
 
 \section{References}
 \printbibliography[heading=none]
