--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -967,6 +967,16 @@ journal = {IEEE Transactions on Signal Processing},
 pages = {3397--3415},
 }
 
+@article{wavelets1,
+author={Mateo, Carlos and Talavera, Juan Antonio},
+year={2020},
+title={Bridging the gap between the short-time Fourier transform (STFT), wavelets, the constant-Q transform and multi-resolution STFT},
+journal={Signal, Image and Video Processing},
+volume={14},
+pages={1535--1543},
+doi={10.1007/s11760-020-01701-8}
+}
+
 @article{optsp,
 title={Real-time convex optimization in signal processing},
 author = {Mattingley, J. and Boyd, S.},
@@ -1141,6 +1151,16 @@ doi={10.1109/T-AIEE.1928.5055024}}
   year      = {2007},
   %url       = {https://doi.org/10.1137/060658242},
   doi       = {10.1137/060658242},
+}
+
+@article{gaborwavelet2,
+journal={Azerbaijan Journal of Mathematics},
+volume={4},
+number={1},
+author={Ole, Christensen},
+year={2014},
+title={A short introduction to frames, Gabor systems, and wavelet systems},
+url={https://backend.orbit.dtu.dk/ws/portalfiles/portal/105634286/A_Short_Introduction_to_Frames.pdf}
 }
 
 @article{earlywarped1,
@@ -1450,6 +1470,24 @@ author={Fabian-Robert Stöter and Antoine Liutkus and Nobutaka Ito},
   %url = {https://hal.inria.fr/hal-02293689/document}
 }
 
+@article{gaborwavelet1,
+journal={Journal of Mathematical Physics},
+year={2017},
+title={Gabor analysis as contraction of wavelets analysis},
+author={Eyal M. Subag and Ehud Moshe Baruch and Joseph L. Birman3 and Ady Mann},
+volume={58},
+number={8},
+doi={10.1063/1.4986620},
+}
+
+@inproceedings{wavelets2,
+author = {Tzanetakis, George and Essl, Georg and Cook, Perry},
+year = {2001},
+pages = {318--323},
+title = {Audio analysis using the discrete wavelet transform},
+journal = {Proceedings of the Conference in Acoustics and Music Theory Applications},
+}
+
 @inproceedings{umxorig1,
 author={Uhlich, Stefan and Porcu, Marcello and Giron, Franck and Enenkl, Michael and Kemp, Thomas and Takahashi, Naoya and Mitsufuji, Yuki},
 booktitle={IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
@@ -1532,6 +1570,27 @@ journal = {Computing in Science \& Engineering},
 doi = {10.1109/MCSE.2011.37}
 }
 
+@article{mdct,
+author = {Wang, Ye and Vilermo, Miikka},
+year = {2003},
+pages = {52--61},
+title = {Modified discrete cosine transform: its implications for audio coding and error concealment},
+volume = {51},
+journal = {Journal of the The Audio Engineering Society},
+url = {https://smcnus.comp.nus.edu.sg/wp-content/uploads/papers/5.Error_Robust_Audio_Streaming/2002_The_Modified_Discrete_Cosine_Transform-Its_Implications_for_Audio_Coding_and_Error_Concealment.pdf}
+}
+
+@article{gaborexpansion,
+journal={Signal Processing},
+pages={207--220},
+volume={21},
+number={3},
+year={1990},
+title={Discrete Gabor expansions},
+author={Wexler, J. and Raz, S.},
+doi={10.1016/0165-1684(90)90087-F}
+}
+
 @article{noisyphase1,
       title={WHAM!: extending speech separation to noisy environments}, 
       author={Gordon Wichern and Joe Antognini and Michael Flynn and Licheng Richard Zhu and Emmett McQuinn and Dwight Crow and Ethan Manilow and Jonathan {Le Roux}},
@@ -1599,62 +1658,3 @@ doi = {10.11591/ijece.v11i3.pp2315-2326}
     %url = {https://doi.org/10.1162/neco\_a\_01199},
     %eprint = {https://direct.mit.edu/neco/article-pdf/31/7/1235/1053200/neco\_a\_01199.pdf},
 }
-
-@article{wavelets1,
-author={Mateo, Carlos and Talavera, Juan Antonio},
-year={2020},
-title={Bridging the gap between the short-time Fourier transform (STFT), wavelets, the constant-Q transform and multi-resolution STFT},
-journal={Signal, Image and Video Processing},
-volume={14},
-pages={1535--1543},
-doi={10.1007/s11760-020-01701-8}
-}
-
-@inproceedings{wavelets2,
-author = {Tzanetakis, George and Essl, Georg and Cook, Perry},
-year = {2001},
-pages = {318--323},
-title = {Audio analysis using the discrete wavelet transform},
-journal = {Proceedings of the Conference in Acoustics and Music Theory Applications},
-}
-
-@article{gaborexpansion,
-journal={Signal Processing},
-pages={207--220},
-volume={21},
-number={3},
-year={1990},
-title={Discrete Gabor expansions},
-author={Wexler, J. and Raz, S.},
-doi={10.1016/0165-1684(90)90087-F}}
-
-@article{gaborwavelet1,
-journal={Journal of Mathematical Physics},
-year={2017},
-title={Gabor analysis as contraction of wavelets analysis},
-author={Eyal M. Subag and Ehud Moshe Baruch and Joseph L. Birman3 and Ady Mann},
-volume={58},
-number={8},
-doi={10.1063/1.4986620},
-}
-
-@article{gaborwavelet2,
-journal={Azerbaijan Journal of Mathematics},
-volume={4},
-number={1},
-author={Ole, Christensen},
-year={2014},
-title={A short introduction to frames, Gabor systems, and wavelet systems},
-url={https://backend.orbit.dtu.dk/ws/portalfiles/portal/105634286/A_Short_Introduction_to_Frames.pdf}
-}
-
-@article{mdct,
-author = {Wang, Ye and Vilermo, Miikka},
-year = {2003},
-pages = {52--61},
-title = {Modified discrete cosine transform: its implications for audio coding and error concealment},
-volume = {51},
-journal = {Journal of the The Audio Engineering Society},
-url = {https://smcnus.comp.nus.edu.sg/wp-content/uploads/papers/5.Error_Robust_Audio_Streaming/2002_The_Modified_Discrete_Cosine_Transform-Its_Implications_for_Audio_Coding_and_Error_Concealment.pdf}
-}
-
