--- a/latex/proposal.tex
+++ b/latex/proposal.tex
@@ -1,12 +1,12 @@
 \documentclass[letter,12pt]{article}
+\usepackage[svgnames]{xcolor}
 \usepackage[left=4cm, right=2.5cm, top=2.5cm, bottom=2.5cm]{geometry}
 \usepackage{hyperref}
 \hypersetup{
-    colorlinks,
-    citecolor=black,
-    filecolor=black,
-    linkcolor=black,
-    urlcolor=black
+  colorlinks   = true, %Colours links instead of ugly boxes
+  urlcolor     = DarkBlue, %Colour for external hyperlinks
+  linkcolor    = black, %Colour of internal links
+  citecolor   = black %Colour of citations
 }
 \usepackage{setspace}
 \renewcommand{\topfraction}{0.85}
