--- a/latex/report.tex
+++ b/latex/report.tex
@@ -24,11 +24,10 @@
 \setlength{\droptitle}{1cm}
 \usepackage{hyperref}
 \hypersetup{
-    colorlinks,
-    citecolor=black,
-    filecolor=black,
-    linkcolor=black,
-    urlcolor=black
+  colorlinks   = true, %Colours links instead of ugly boxes
+  urlcolor     = DarkBlue, %Colour for external hyperlinks
+  linkcolor    = black, %Colour of internal links
+  citecolor   = black %Colour of citations
 }
 \usepackage{setspace}
 \renewcommand{\topfraction}{0.85}
